--- a/app/views/patients/diagnostics/treatments/show.html.erb
+++ b/app/views/patients/diagnostics/treatments/show.html.erb
@@ -1,10 +1,13 @@
-<div class="container">
+<div id="sub-content" class="container">
   <%= fudgeball_return_button patient_diagnostic_treatments_path(@patient, @diagnostic) %>
   <div class="mt-8">
+    <%= fudgeball_form_alert class: "my-4" %>
     <p class="mt-2"><span class="font-bold">Doença:</span> <%= @diagnostic.disease.name %></p>
     <p class="mt-2"><span class="font-bold">Data de início:</span> <%= @treatment.started_at&.strftime("%d/%m/%Y") %></p>
-    <p class="mt-2"><span class="font-bold">Data do fim:</span> <%= @treatment.ended_at&.strftime("%d/%m/%Y") %></p>
+    <%= render "patients/diagnostics/treatments/show/treatment_end", patient: @patient, diagnostic: @diagnostic, treatment: @treatment %>
     <hr class="h-px my-8 bg-gray-200 border-0">
-    <%= render "patients/diagnostics/treatments/show/#{@treatment.treatable_type.parameterize}", treatable: @treatable %>
+    <div id="<%= dom_id @treatable %>">
+      <%= render "patients/diagnostics/treatments/show/#{@treatment.treatable_type.parameterize}", treatable: @treatable %>
+    </div>
   </div>
 </div>
