--- a/app/views/patients/diagnostics/prescriptions/new.html.erb
+++ b/app/views/patients/diagnostics/prescriptions/new.html.erb
@@ -1,26 +1,16 @@
 <div class="container">
   <%= fudgeball_return_button patient_diagnostic_treatments_path(@patient, @diagnostic) %>
-  <div>
+  <div class="w-6/12 mx-auto">
     <h2>Cadastrar nova receita</h2>
 
     <%= fudgeball_form model: @prescription, url: patient_diagnostic_prescriptions_path(@patient, @diagnostic), method: :post, class: "mt-8" do |form| %>
-      <%= fudgeball_form_alert class: "my-4 mx-auto" %>
+      <%= fudgeball_form_alert class: "my-4" %>
 
-      <div class="flex justify-center">
-        <%= form.input :date, :date, required: true, autofocus: true, class: "w-80" %>
-      </div>
+      <%= form.input :date, :date, required: true, autofocus: true, class: "w-full" %>
+      <%= form.input :medications_count, :number, required: true, class: "w-full" %>
+      <%= form.attach_input :file, accept: "image/png, image/jpeg, application/pdf", class: "w-full" %>
 
-      <div class="flex justify-center mt-5">
-        <%= form.input :medications_count, :number, required: true, class: "w-80" %>
-      </div>
-
-      <div class="flex justify-center mt-5">
-        <%= form.attach_input :file, accept: "image/png, image/jpeg, application/pdf" %>
-      </div>
-
-      <div class="mt-8 flex justify-center">
-        <%= form.submit "Cadastrar", class: "w-80" %>
-      </div>
+      <%= form.submit "Cadastrar", class: "mt-8 w-full" %>
     <% end %>
   </div>
 </div>
