--- a/app/views/patients/shared/aside_menu/_options.html.erb
+++ b/app/views/patients/shared/aside_menu/_options.html.erb
@@ -1,6 +1,13 @@
 <%= render "patients/shared/aside_menu/authorization_control", patient:, doctor:, access_control: %>
 
 <%= tag.li do %>
+  <%= link_to patient_biodata_path(patient), class: "flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100" do %>
+    <%= image_tag "icons/biodata.svg", class: "w-6 h-6 text-gray-500 transition duration-75 group-hover:text-gray-900" %>
+    <span class="ml-3">Biodados</span>
+  <% end %>
+<% end if allow?("patients/biodata", "show", [patient, doctor]) %>
+
+<%= tag.li do %>
   <%= link_to patient_consultations_path(patient), class: "flex items-center p-2 text-gray-900 rounded-lg hover:bg-gray-100" do %>
     <%= image_tag "icons/consultations.svg", class: "w-6 h-6 text-gray-500 transition duration-75 group-hover:text-gray-900" %>
     <span class="ml-3">Consultas</span>
