--- a/app/views/patients/diagnostics/treatments/show/_prescription.html.erb
+++ b/app/views/patients/diagnostics/treatments/show/_prescription.html.erb
@@ -1,4 +1,7 @@
 <p class="mt-2"><span class="font-bold">Tipo de tratamento:</span> <%= treatable.class.model_name.human %></p>
+<div class="mt-2">
+  <%= fudgeball_button "Baixar receita", url: rails_blob_path(@treatable.file, disposition: :attachment) %>
+</div>
 
 <p class="font-bold mt-8">Medicamentos receitados</p>
 <% treatable.medications.each do |medication| %>
