--- a/app/views/patients/exams/show.html.erb
+++ b/app/views/patients/exams/show.html.erb
@@ -5,6 +5,7 @@
     <p class="mt-2"><span class="font-bold">Data do exame:</span> <%= @exam.date.strftime("%d/%m/%Y") %></p>
     <p class="mt-2"><span class="font-bold">Tipo do exame:</span> <%= t(@exam.classification, scope: "activerecord.attributes.exam/classification") %></p>
     <p class="mt-2"><span class="font-bold">Local do exame:</span> <%= @exam.local %></p>
+    <%= fudgeball_button "Baixar anexo do exame", url: rails_blob_path(@exam.result, disposition: :attachment) if @exam.result.attached? %>
 
     <div class="mt-16">
       <% if @biodatum.present? %>
