--- a/app/views/patients/diagnostics/treatments/show/_treatment_end.html.erb
+++ b/app/views/patients/diagnostics/treatments/show/_treatment_end.html.erb
@@ -1,6 +1,6 @@
 <% if treatment.ended_at.present? %>
   <p class="mt-2"><span class="font-bold">Data do fim:</span> <%= treatment.ended_at.strftime("%d/%m/%Y") %></p>
-<% else %>
+<% elsif current_user.doctor? %>
   <%= fudgeball_form model: treatment, url: patient_diagnostic_treatment_path(patient, diagnostic, treatment), method: :patch, class: "mt-2" do |form| %>
     <div class="flex items-center">
       <p class="mr-3"><span class="font-bold">Data do fim:</span></p>
