--- a/app/views/patients/surgeries/show.html.erb
+++ b/app/views/patients/surgeries/show.html.erb
@@ -1,8 +1,21 @@
-<div class="container">
+<div id="sub-content" class="container">
   <%= fudgeball_return_button patient_surgeries_path(@patient) %>
   <div class="mt-8">
+    <%= fudgeball_form_alert class: "my-4" %>
     <p class="mt-2"><span class="font-bold">Paciente:</span> <%= @surgery.patient.full_name %></p>
     <p class="mt-2"><span class="font-bold">Data da cirurgia:</span> <%= @surgery.date.strftime("%d/%m/%Y") %></p>
     <p class="mt-2"><span class="font-bold">Tipo da cirurgia:</span> <%= t(@surgery.classification, scope: "activerecord.attributes.surgery/classification") %></p>
+
+    <% if @surgery.discharged_at.present? %>
+      <p class="mt-2"><span class="font-bold">Data da alta:</span> <%= @surgery.discharged_at.strftime("%d/%m/%Y") %></p>
+    <% elsif current_user.doctor? %>
+      <%= fudgeball_form model: @surgery, url: patient_surgery_path(@patient, @surgery), method: :patch, class: "mt-2" do |form| %>
+        <div class="flex items-center">
+          <p class="mr-3"><span class="font-bold">Data da alta:</span></p>
+          <%= form.input :discharged_at, :date, label: false, required: true, class: "mr-3" %>
+          <%= form.submit "Salvar data da alta" %>
+        </div>
+      <% end %>
+    <% end %>
   </div>
 </div>
