--- a/app/views/patients/diagnostics/treatments/new.html.erb
+++ b/app/views/patients/diagnostics/treatments/new.html.erb
@@ -3,8 +3,8 @@
   <h2 class="mt-8">Cadastrar novo tratamento</h2>
 
   <div class="mt-5 flex justify-around items-center">
-    <%= fudgeball_call_to_action "Cirurgia", { url: new_patient_diagnostic_surgery_path(@patient, @diagnostic), icon: { name: :treatments, color: :primary } }, { class: "mt-5 w-80" } %>
-    <%= fudgeball_call_to_action "Dieta", { url: new_patient_diagnostic_diet_path(@patient, @diagnostic), icon: { name: :treatments, color: :primary } }, { class: "mt-5 w-80" } %>
-    <%= fudgeball_call_to_action "Receita", { url: new_patient_diagnostic_prescription_path(@patient, @diagnostic), icon: { name: :treatments, color: :primary } }, { class: "mt-5 w-80" } %>
+    <%= fudgeball_call_to_action "Cirurgia", { url: new_patient_diagnostic_surgery_path(@patient, @diagnostic), icon: { name: :surgeries, color: :primary } }, { class: "mt-5 w-80" } %>
+    <%= fudgeball_call_to_action "Dieta", { url: new_patient_diagnostic_diet_path(@patient, @diagnostic), icon: { name: :diets, color: :primary } }, { class: "mt-5 w-80" } %>
+    <%= fudgeball_call_to_action "Receita", { url: new_patient_diagnostic_prescription_path(@patient, @diagnostic), icon: { name: :prescriptions, color: :primary } }, { class: "mt-5 w-80" } %>
   </div>
 </div>
